--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
     <div id="app"></div>
     
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./dist/build.js"></script>
   </body>
 </html>
